# agent-permit-office

./: .env.example  .gitignore  README.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  integration_request.yml  rule_request.yml
.github/workflows/: agent-permit.yml
dashboard/: .env.example  README.md
dashboard/src/: App.css  index.css
docs/: agent-permit-office-scope.md  ci-context-hardening.md  codebase-and-services-blueprint.md  codebase-context-and-indexing.md  deep-agent-investigator.md  demo.md  github-action.md  live-deep-agent-validation.md  local-live-stack-sprint-plan.md  open-core-business-plan.md  open-source-agent-access-scan-report.md  open-source-release-readiness.md  openrouter-model-decision.md  permitgraph-dashboard-snapshot-contract.md  phoenix-observability-evaluation.md  plane-execution-sync.md  product-analytics-evals-roadmap.md  product-scope-market-review.md  project-management-sprint-plan.md  proof-pack-export.md  real-repo-validation.md  release-candidate-plan.md  repository-policy-config.md  sanitized-demo-artifacts.md  sarif-code-scanning.md  scanner-and-model-plan.md  sprint33-artifact-shape-audit.md  system-diagram-end-to-end.md  tech-stack-langchain-deep-agents.md
docs/evals/: README.md  real-repos.json
docs/research/: langchain-deep-agents-architecture.md  sarif-mvp-decision.md  static-analysis-agent-security-research.md
src/agent_permit/: __init__.py  __main__.py  analytics.py  artifacts.py  capability_graph.py  cli.py  db.py  deep_agent.py  demo.py  evals.py  events.py  evidence_context.py  investigation.py  model_provider.py  models.py  observability.py  path_finder.py  permit_engine.py  policy.py  redaction.py  reporting.py  sarif.py
tests/fixtures/: README.md
tests/unit/: test_artifacts.py  test_cli.py  (+17 more)
tools/: export_dashboard_snapshot.py  release_check.py
worker/: package.json  tsconfig.json  wrangler.jsonc
(+31 files in other folders)
