[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-permit-office"
version = "0.1.0"
description = "Evidence-backed permit scanner for AI agent tools, credentials, memory, and production access."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Hudson Aikins" }
]
dependencies = [
  "pathspec>=0.12",
  "pydantic>=2.11",
]

[project.scripts]
agent-permit = "agent_permit.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_permit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
