[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-permit-office"
version = "0.1.0"
description = "Evidence-backed permit scanner for AI agent tools, credentials, memory, and production access."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Hudson Aikins" }
]
dependencies = [
  "pathspec>=0.12",
  "pydantic>=2.11",
]

[project.optional-dependencies]
db = [
  "psycopg[binary]>=3.2",
]
deep-agent = [
  "deepagents>=0.6.3",
  "langchain-openai>=1.1.0",
]
phoenix = [
  "arize-phoenix>=12.0",
  "arize-phoenix-client>=2.6.0",
  "arize-phoenix-otel>=0.16.0",
  "openinference-instrumentation-langchain>=0.1.54",
]

[project.scripts]
agent-permit = "agent_permit.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_permit"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.agent-permit",
  "/.fallow",
  "/.venv",
  "/dist",
  "/dashboard/.fallow",
  "/dashboard/dist",
  "/dashboard/node_modules",
  "**/__pycache__",
  "**/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
